--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/node": "^22.13.10"
   },
   "dependencies": {
-    "ace-builds": "^1.39.0"
+    "ace-builds": "^1.39.0",
+    "tsc": "^2.0.4"
   }
 }
