--- a/tsconfig.json
+++ b/tsconfig.json
@@ -251,7 +251,7 @@
       /* Type Checking */
    
   
-      "strict": true,                                      /* Enable all strict type-checking options. */
+      "strict": false,                                      /* Enable all strict type-checking options. */
    
   
       // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
